<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.movista.app.presentation.searchparams.dateselect.DateSelectActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/grey_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:foreground="?attr/actionBarItemBackground"
        android:src="@drawable/back_button_black"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/there_date"
        style="@style/TextStyleDateSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/date_select_from"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/return_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_select_to"
        android:layout_marginStart="@dimen/size_xsmall"
        style="@style/TextStyleDateSelect"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/there_date"
        app:layout_constraintTop_toTopOf="parent" />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView android:id="@+id/calendar_view"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_medium"
        app:mcv_tileHeight="52dp"
        app:mcv_tileWidth="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:mcv_arrowColor="#2DCEB9"
        app:mcv_showOtherDates="all"
        app:mcv_weekDayTextAppearance="@style/TextStyleDateSelectCalendarWeekDay"
        app:mcv_dateTextAppearance="@style/TextStyleDateSelectCalendarDay"
        app:mcv_headerTextAppearance="@style/TextStyleDateSelectCalendarHeader"
        app:mcv_rightArrowMask="@drawable/calendar_arrow_forward"
        app:mcv_leftArrowMask="@drawable/calendar_arrow_back" />

    <View
        android:id="@+id/view_2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="176dp"
        app:layout_constraintEnd_toStartOf="@+id/calendar_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calendar_view" />

    <Button
        android:id="@+id/no_return_needed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_medium"
        android:layout_marginEnd="@dimen/size_medium"
        android:layout_marginStart="@dimen/size_medium"
        android:text="@string/date_select_no_return_needed"
        style="@style/ButtonStyleDateSelect"
        android:visibility="visible"
        android:foreground="?selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/date_select_done_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_medium"
        android:layout_marginEnd="@dimen/size_medium"
        android:layout_marginStart="@dimen/size_medium"
        android:text="@string/button_common_ready"
        style="@style/MainButton"
        android:visibility="gone"
        tools:visibility="visible"
        android:foreground="?selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
